--- a/index.html
+++ b/index.html
@@ -75,24 +75,16 @@
 					</label>
 				</div>
 				<div class="cards cards-restaurants">
-						<!-- Сда скрипт вставляет карточки ресторанов -->
+						<!-- Сюда скрипт вставляет карточки ресторанов -->
 				</div>
 				<!-- /.cards -->
 			</section>
 			<section class="menu hide">
-				<div class="section-heading">
-					<h2 class="section-title restaurant-title">Пицца Плюс</h2>
-					<div class="card-info">
-						<div class="rating">
-							4.5
-						</div>
-						<div class="price">От 900 ₽</div>
-						<div class="category">Пицца</div>
-					</div>
+				<div class="section-heading restaurant-menu">
 					<!-- /.card-info -->
 				</div>
 				<div class="cards cards-menu">
-					<!--  -->
+					<!-- сюда скрипт вставит все карточки товаров/блюд ресторана -->
 				</div>
 				<!-- /.cards -->
 			</section>
